20070529 configure.in,ui/win32/{Makefile.am,win32internals.h,win32ui.rc},
	 windres.rc: work around linker problems affecting Windows resources,
	 and link/include commdlg (Stuart).
20070529 ui/win32/{menu_data.{c,h,rc},win32ui.c}: update Win32 menus, and fix
	 compilation of load/save dialogs (Stuart).
20070529 ui/win32/{debugger.h,pokefinder.h,statusbar.c,win32display.c,
	 win32internals.h,win32ui.c}: use winfuse.ico for Win32 UI window,
	 disable (broken) status bar, change resource IDs to avoid clashes
	 with menu IDs, various cleanups (Stuart).
20070530 tape.c: use refactored call to set tape state (patch #1725974) (Fred).
20070530 profile.c: remove a couple of warnings (Fred).
20070530 menu_data.pl: add code to generate menu data for Win32 UI (Stuart).
20070601 event.h,tape.[ch],widget/widget.c,ui.c,ula.[ch],ui/ui.h,
         ui/gtk/gtkui.c: add support for recording into a RLE raw sample block
         (feature request #1691821) (Fred).
20070601 menu.{c,h},ui/{gtk/{binary.c,fileselector.c,gtkui.c,roms.c},
	 win32/win32ui.c},widget/menu.c: split menu_get_filename() into
	 menu_get_{open,save}_filename(), use menu_get_save_filename() in some
	 cases where a filename could not be entered in widget UIs, and use the
	 'open' file selector in menu_file_recording_recordfromsnapshot() when
	 choosing a snapshot in widget UIs (patch #1727550) (Stuart).
20070602 Makefile.am,configure.in,man/fuse.1,
         sound/{Makefile.am,alsasound.c,lowlevel.h}: add ALSA sound driver
         (patch #1425367) (Gergely Szasz).
20070602 Ignore fuse.exe, ui/win32/keysyms.c and z80/coretest.exe (Stuart).
20070602 ui/win32: ignore *.a libraries (Stuart).
20070602 configure.in,ui/win32/{win32display.{c,h},win32ui.c}: replace
	 DirectDraw-based display code with faster GDI-based code, with
	 scaler support (Stuart).
20070603 configure.in: link with -mwindows for Win32 UI, and remove -lcomdlg32
	 and -lgdi32 as these are automatically linked by -mwindows (Stuart).